--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -4,3 +4,6 @@
 <p align="center">PASSWORD:<input type="password" name="tf2"></p>
 <p align="center"><input type="submit" value="login"></p>
 </form>
+
+
+<!DOCTYPE html>
